--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc_opt.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc_opt.ipynb
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "#profile the selected kernel in the solution with Nsight compute\n",
-    "!cd ../../source_code/openacc && ncu --set full --kernel-regex pair_gpu_182_gpu --launch-skip 1 --launch-count 1 -o rdf_collapse_solution ./rdf"
+    "!cd ../../source_code/openacc && ncu --set full -k pair_gpu --launch-skip 1 --launch-count 1 -o rdf_collapse_solution ./rdf"
    ]
   },
   {
