--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_offload.qdrep) and open it via the GUI. Then profile the specific kernel `pair_gpu` with Nsight compute. We use this as the base to compare with the next steps."
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_offload.qdrep) and open it via the GUI. Then profile the specific kernel `pair_gpu` with Nsight Compute. We use this as the base to compare with the next steps."
    ]
   },
   {
@@ -191,13 +191,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout Nsight compute report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.ncu-rep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
+    "Let's checkout Nsight Compute report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.ncu-rep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
-    "<img src=\"../images/compute_split.png\">\n",
+    "<img src=\"../images/openmp_offload_split_cmp.png\">\n",
     "\n",
-    "When compared to the base version, we achieved 41% improvement in SM utilization and 358% utilization in memory.\n",
+    "When compared to the base version, we achieved 72% improvement in SM utilization and 123% utilization in memory. \n",
     "\n",
     "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_split.cpp) to help you understand better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `num_teams(n)` and `thread_limit`\n",
+    "\n",
+    "When using the `distribute parallel for` construct, the *for loop* is distributed across all threads for all teams of the current teams region. For example, if there are 10 teams, and each team consists of 256 threads, the loop will be distributed across 2560 threads. You can explicitly specify the number of threads to be created in the team using the `thread_limit(m)`. Moreover, you can specify the maximum number of teams created by using `num_teams(n)` (the actual number of teams may be smalled than this number). You can add these attributes to the `teams` construct. Please note that you cannot add `num_teams` to the `parallel` construct clause. For more information, please read the guide at https://docs.nvidia.com/hpc-sdk/compilers/hpc-compilers-user-guide/#openmp-subset .\n",
+    "\n",
+    "\n",
+    "```cpp\n",
+    "#pragma omp target teams distribute num_teams(65535)\n",
+    "for (int i = 0; i < N; i++ )\n",
+    "{\n",
+    "    #pragma parallel for thread_limit(128)\n",
+    "    for (int j=0;j< M;j++)\n",
+    "        < loop code >\n",
+    "} \n",
+    "```\n",
+    "In the previous section, the grid size was too small to keep the hardware busy. Take a look at the *Launch Statistics*, the grid size is 80. \n",
+    "\n",
+    "<img src=\"../images/openmp_offload_split_grid.png\">\n",
+    "\n",
+    "Now, lets start modifying the code again and add `thread_limit(n)` to the `teams` construct. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openmp` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
+    "\n",
+    "**NOTE:** Try increasing the grid size to 65525 (*hint:* use `num_teams(65535)`). Once done, compile and profile the code and compare it with the previous version. Are there any differences? What does the profiler show?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compile for Tesla GPU\n",
+    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf rdf.cpp "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure to validate the output by running the executable and validate the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Run on Nvidia GPU and check the output\n",
+    "!cd ../../source_code/openmp && ./rdf && cat Pair_entropy.dat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output should be the following:\n",
+    "\n",
+    "```\n",
+    "s2 value is -2.43191\n",
+    "s2bond value is -3.87014\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#profile and see output of nvptx\n",
+    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_offload_split_num ./rdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_split_num.qdrep) and open it via the GUI. Let's dig deeper and profile the `pair_gpu` kernel with Nsight Compute and compare it with the baseline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#profile with nsight compute\n",
+    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_offload_split_num ./rdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's checkout the Nsight Compute report. [Download the profiler output](../../source_code/openmp/rdf_offload_split_num.ncu-rep) and open it via the GUI. \n",
+    "\n",
+    "<img src=\"../images/openmp_offload_split_cmp2.png\">\n",
+    "\n",
+    "Comparing to the previous version, we achieved 173% utilization in memory but 32% less SM utilization. Now, let's compare the two optimization approaches with the base version (using target offload). As seen in the roofline chart below, the application is now in the *memory bound* region which means either it is limited by memory bandwidth or latency.\n",
+    "\n",
+    "<img src=\"../images/openmp_offload_roofline.png\">\n",
+    "\n",
+    "\n",
+    "The kernel exhibits low compute throughput and memory bandwidth utilization relative to the peak performance of the device. Let's have a look at the *Warp State Statistics* section for potential reasons.\n",
+    "\n",
+    "<img src=\"../images/openmp_warp_cmp.png\">\n",
+    "\n",
+    "Comparing the two optimizations, warp is stalled waiting for the L1 instruction queue for local and global (LG) memory operations to be not full. The instruction queue is full. \n",
+    "\n",
+    " It is very clear that we did not improve anything through previous approaches. In the following sections, we look at the `collapse` clause to improve the performance.\n",
+    "\n",
+    "Feel free to checkout the example [solution](../../source_code/openmp/SOLUTION/rdf_offload_offload_split_num.cpp) to help you understand better."
    ]
   },
   {
@@ -221,7 +338,7 @@
     "} \n",
     "```\n",
     "\n",
-    "Now, lets start modifying the original code and add the collapse clause. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openmp` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Now, lets start modifying the original code before splitting the `teams distribute` from `parallel for` and add the collapse clause. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openmp` directory. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -300,40 +417,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the Nsight compute report. [Download the profiler output](../../source_code/openmp/rdf_collapse.ncu-rep) and open it via the GUI. Have a look at the example expected profiler report below (yellow line is the base version, blue is the current):\n",
+    "Let's checkout the Nsight Compute report. [Download the profiler output](../../source_code/openmp/rdf_collapse.ncu-rep) and open it via the GUI. Have a look at the example expected profiler report below (yellow is the base version, blue is the current):\n",
     "\n",
-    "<img src=\"../images/compute_collapse.png\">\n",
+    "<img src=\"../images/openmp_offload_collapse.png\">\n",
     "\n",
-    "When compared to the base version (using baseline feature on Nsight compute), we achieved 128% improvement in SM utilization and 66% utilization in memory. We can also see the improvement and better utilization in the roofline analysis (see example screenshot below).\n",
+    "When compared to the base version (using baseline feature on Nsight Compute), we achieved 58% improvement in SM utilization and 25% utilization in memory. We can also see the improvement and better utilization in the roofline analysis (see example screenshot below).The ideal situation would be getting closer to the rooflines (up).\n",
     "\n",
-    "<img src=\"../images/compute_collapse_roofline.png\">\n",
+    "<img src=\"../images/openmp_collapse_baseline.png\">\n",
     "\n",
-    "Dots with the blue outline is the optimzied version and the ones with the orange outline is the base version.\n",
+    "Dots with the yellow outline is the optimized version using `collapse` clause and the ones with the blue outline is the base version.\n",
     "\n",
-    "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `num_teams(n)` and `num_threads`\n",
+    "Lets checkout the *Occupancy* section. Occupancy is the ratio of the number of active warps per multiprocessor to the maximum number of possible active warps. As seen in the below screenshot, the theoretical occupancy is 65% and the achieved occupancy is 58%. The plot showing the impact of varying register count per thread indicates that by reducing the number of registers per thread, we can increase the warp occupancy. \n",
     "\n",
-    "When using the `distribute parallel for` construct, the for loop is distributed across all threads for all teams of the current teams region. For example, if there are 10 teams, and each team consists of 256 threads, the loop will be distributed across 2560 threads. You can explicitly specify the number of threads to be created in the team using the `num_threads(m)`. Moreover, you can specify the maximum number of teams created by using `num_teams(n)` (the actual number of teams may be smalled than this number). You can add these attributes to the `collpase(x)` clause or `parallel for` clause. \n",
+    "<img src=\"../images/openmp_offload_occupancy.png\">\n",
     "\n",
-    "\n",
-    "```cpp\n",
-    "#pragma omp target teams distribute parallel for collapse(2) num_threads(256)\n",
-    "for (int i = 0; i < N; i++ )\n",
-    "{\n",
-    "    for (int j=0;j< M;j++)\n",
-    "        < loop code >\n",
-    "} \n",
-    "```\n",
-    "\n",
-    "Now, lets start modifying the original code and add `num_threads(n)` to the `collapse` clause. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openmp` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
-    "\n",
-    "**NOTE:** To do some more experiment, try changing the value of `n` to 128, 256, 512. Then compile, run and profile the code and compare the result. Are there any differences? What does the profiler show?"
+    "We can limit the register count at compile time by adding `-gpu=maxregcount:32` flag. Based on the plot, let reduce the number of registers per thread to 32 to see if it improves the overall performance. "
    ]
   },
   {
@@ -343,7 +441,7 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf rdf.cpp "
+    "!cd ../../source_code/openmp && nvc++ -mp=gpu -gpu=maxregcount:32 -Minfo=mp -o rdf SOLUTION/rdf_offload_collapse.cpp "
    ]
   },
   {
@@ -382,14 +480,14 @@
    "outputs": [],
    "source": [
     "#profile and see output of nvptx\n",
-    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_offload_num ./rdf"
+    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_offload_collapse_regcount ./rdf"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_num.qdrep) and open it via the GUI. Let's dig deeper and profile the `pair_gpu` kernel with Nsight compute and compare it with the baseline."
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_collapse_regcount.qdrep) and open it via the GUI. Let's dig deeper and profile the `pair_gpu` kernel with Nsight Compute and compare it with the baseline."
    ]
   },
   {
@@ -399,14 +497,41 @@
    "outputs": [],
    "source": [
     "#profile with nsight compute\n",
-    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_collapse_num ./rdf"
+    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_collapse_regcount ./rdf"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the Nsight compute report. [Download the profiler output](../../source_code/openmp/rdf_collapse_num.ncu-rep) and open it via the GUI. Feel free to checkout the example [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse_num.cpp) to help you understand better."
+    "Let's checkout the Nsight Compute report. [Download the profiler output](../../source_code/openmp/rdf_collapse_regcount.ncu-rep) and open it via the GUI. Have a look at the example expected profiler report below (pink is the previous version using `collapse` clause, blue is the current after limiting the register count):\n",
+    "\n",
+    "<img src=\"../images/openmp_collapse_reg.png\">\n",
+    "\n",
+    "We achieved 143% utilization in memory but SM utilization reduced by 6%. The current version takes 17% longer to execute. Roofline chart shows the application is now in memory bound region comparing to before that was in compute bound region (dots with the pink outline is the base version using `collapse` clause and the ones with the blue outline is the current version).\n",
+    "\n",
+    "<img src=\"../images/openmp_collapse_reg_roofline.png\">\n",
+    "\n",
+    "Lets checkout the *Occupancy* section. As seen in the below screenshot, the theoretical occupancy is 100% and the achieved occupancy is 95%. Higher occupancy does not always result in higher performance, however, low occupancy always reduces the ability to hide latencies, resulting in overall performance degradation.\n",
+    "\n",
+    "\n",
+    "<img src=\"../images/openmp_collapse_reg_occupancy.png\">\n",
+    "\n",
+    "Let's have a look at the memory chart in the *memory workload analysis* section. Links between local memory and L1/TEX cache show an increase in the number of requests generated due to local memory load/store instructions. These are the result of registers spilling to local memory that happened after reducing the number of registers per thread to increase the occupancy. Once can also see the registers spilling by using `-Mcuda=ptxinfo` option at the compile time. Below is an example output showing the number of bytes spills to local memory. To read more about PTX, checkout the guide at https://docs.nvidia.com/cuda/parallel-thread-execution/index.html#ptx-machine-model .\n",
+    "\n",
+    "``\n",
+    "ptxas info    : 0 bytes gmem\n",
+    "ptxas info    : Compiling entry function 'nvkernel__Z8pair_gpuPKdS0_S0_Pjiidddi_F1L174_1' for 'sm_70'\n",
+    "ptxas info    : Function properties for nvkernel__Z8pair_gpuPKdS0_S0_Pjiidddi_F1L174_1\n",
+    "    40 bytes stack frame, 52 bytes spill stores, 60 bytes spill loads\n",
+    "ptxas info    : Used 32 registers, 448 bytes cmem[0]\n",
+    "``\n",
+    "\n",
+    "It is very clear that reducing the number of registers, had impact on memory and it hurt the performance by increasing the instruction count as well as memory traffic.\n",
+    "\n",
+    "<img src=\"../images/openmp_collapse_reg_memory.png\">\n",
+    "\n",
+    "Feel free to checkout the example [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better."
    ]
   },
   {
