--- a/hpc/nways/nways_labs/nways_MD/English/nways_MD_start.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/nways_MD_start.ipynb
@@ -36,12 +36,21 @@
     "\n",
     " We will be following the cycle of Analysis - Parallelization - Optimization cycle throughout. To start with let us understand the Nsight tool ecosystem:   \n",
     "\n",
-    "- [Introduction to Profiling](../../profiler/English/jupyter_notebook/profiling.ipynb)\n",
+    "- [Nsight Systems](../../profiler/English/jupyter_notebook/nsight_systems.ipynb)\n",
     "    - Overview of Nsight profiler tools\n",
     "    - Introduction to Nsight Systems\n",
+    "    - How to view the report\n",
     "    - How to use NVTX APIs\n",
-    "    - Introduction to Nsight Compute\n",
     "    - Optimization Steps to parallel programming \n",
+    "    \n",
+    "- [Nsight Compute](../../profiler/English/jupyter_notebook/nsight_compute.ipynb)\n",
+    "    - Introduction to Nsight Compute\n",
+    "    - Overview of sections\n",
+    "    - Roofline Charts\n",
+    "    - Memory Charts\n",
+    "    - Profiling a kernel using CLI\n",
+    "    - How to view the report\n",
+    " \n",
     "    \n",
     "We will be working on porting a radial distribution function (RDF) to GPUs. Please choose one of the programming language to proceed working on RDF. \n",
     "\n",
@@ -127,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
